Finished account creation implementation
