# src/main/java/com/nn/task/currency/exchange/api/controller/AccountController.java
@@ -1,24 +1,33 @@
 package com.nn.task.currency.exchange.api.controller;
 
-import com.nn.task.currency.exchange.api.dto.AccountInfoResponse;
-import com.nn.task.currency.exchange.api.dto.CreateAccountRequest;
+import com.nn.task.currency.exchange.api.mapper.AccountDetailsMapper;
+import com.nn.task.currency.exchange.api.openapi.model.AccountDetailsResponse;
+import com.nn.task.currency.exchange.api.openapi.model.CreateAccountRequest;
 import com.nn.task.currency.exchange.api.service.AccountService;
 import lombok.RequiredArgsConstructor;
+import org.openapitools.api.AccountsApi;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-@RestController
-@RequestMapping("/accounts")
-@RequiredArgsConstructor
-public class AccountController {
-    private final AccountService accountService;
+import java.util.UUID;
 
-    @PostMapping
-    public ResponseEntity<AccountInfoResponse> createAccount(@RequestBody CreateAccountRequest request) {
-        return ResponseEntity.ok(accountService.createAccount(request));
+@RestController
+@RequiredArgsConstructor
+public class AccountController implements AccountsApi {
+    private final AccountService accountService;
+    private final AccountDetailsMapper accountDetailsMapper;
+
+    @Override
+    public ResponseEntity<AccountDetailsResponse> accountsPost(@RequestBody CreateAccountRequest request) {
+        var account = accountService.createAccount(accountDetailsMapper.toAccountCreationDetails(request));
+        return ResponseEntity.ok(accountDetailsMapper.toAccountDetailsResponse(account));
+    }
+
+    @Override
+    public ResponseEntity<AccountDetailsResponse> accountsIdGet(@PathVariable UUID id) {
+        var account = accountService.getAccount(id);
+        return ResponseEntity.ok(accountDetailsMapper.toAccountDetailsResponse(account));
     }
 }
-
