# src/main/java/com/nn/task/currency/exchange/api/service/AccountService.java
@@ -1,7 +1,7 @@
 package com.nn.task.currency.exchange.api.service;
 
-import com.nn.task.currency.exchange.api.dto.AccountInfoResponse;
-import com.nn.task.currency.exchange.api.dto.CreateAccountRequest;
+import com.nn.task.currency.exchange.api.domain.model.AccountCreationDetails;
+import com.nn.task.currency.exchange.api.domain.model.AccountDetails;
 import com.nn.task.currency.exchange.api.entity.Account;
 import com.nn.task.currency.exchange.api.repository.AccountRepository;
 import lombok.RequiredArgsConstructor;
@@ -15,7 +15,7 @@ import java.util.UUID;
 public class AccountService {
     private final AccountRepository accountRepository;
 
-    public AccountInfoResponse createAccount(CreateAccountRequest request) {
+    public AccountDetails createAccount(AccountCreationDetails request) {
         var account = Account.builder()
                 .firstName(request.firstName())
                 .lastName(request.lastName())
@@ -23,17 +23,17 @@ public class AccountService {
                 .balanceUSD(BigDecimal.ZERO)
                 .build();
         account = accountRepository.save(account);
-        return toResponse(account);
+        return toDomain(account);
     }
 
-    public AccountInfoResponse getAccount(UUID id) {
+    public AccountDetails getAccount(UUID id) {
         var account = accountRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Account not found"));
-        return toResponse(account);
+        return toDomain(account);
     }
 
-    private AccountInfoResponse toResponse(Account account) {
-        return new AccountInfoResponse(
+    private AccountDetails toDomain(Account account) {
+        return new AccountDetails(
                 account.getId(),
                 account.getFirstName(),
                 account.getLastName(),
